// Shared contains objects used across methods in multiple services.

syntax = "proto3";

package api.v1;

option go_package = "github.com/pubgolf/pubgolf/api/internal/lib/proto/api/v1;apiv1";

enum ScoringCategory {
  SCORING_CATEGORY_UNSPECIFIED = 0;
  SCORING_CATEGORY_PUB_GOLF_NINE_HOLE = 1;
  SCORING_CATEGORY_PUB_GOLF_FIVE_HOLE = 2;
  SCORING_CATEGORY_PUB_GOLF_CHALLENGES = 3;
}

message Player {
  string id = 1;
  PlayerData data = 2;
}

// PlayerData contains the user-editable fields for a player.
message PlayerData {
  string name = 1;
  ScoringCategory scoring_category = 2;
}
