syntax = "proto3";

package PubGolf;

message Score {
  string label = 1;
  int32 points = 2;
  sint32 adjustments = 3;
  int32 total = 4;
  int32 ranking = 5;

  // Generic holder for navigating to the "profile" view of whatever entity each
  // row represents (user, venue, etc).
  string entity_id = 6;
}

message ScoreList {
  string label = 1;
  repeated Score scores = 2;
}
