syntax = "proto3";

package PubGolf;

message Venue {
  string venueID = 1;
  string name = 2;
  string address = 3;
  // Primary image suitable for display. Stored as URL.
  string image = 4;
  string startTime = 5;
}

message VenueStop {
  string stopID = 1;
  Venue venue = 2;
}

message VenueList {
  repeated VenueStop venues = 1;
}
